--- a/package.json
+++ b/package.json
@@ -8,13 +8,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body": "^5.1.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
-    "mongodb": "^3.1.8"
+    "mongodb": "^3.1.10",
+    "parser": "^0.1.4"
   },
   "devDependencies": {
-    "nodemon": "^1.18.5"
+    "nodemon": "^1.18.7"
   },
-  "description": ""
+  "description": "CODIGO EN PROCESO",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cmcampom/Chocobrand-Full.git"
+  },
+  "bugs": {
+    "url": "https://github.com/cmcampom/Chocobrand-Full/issues"
+  },
+  "homepage": "https://github.com/cmcampom/Chocobrand-Full#readme"
 }
